--- a/Help/html/P-FastMoq.Mocker.Strict.htm
+++ b/Help/html/P-FastMoq.Mocker.Strict.htm
@@ -169,10 +169,10 @@
             <div id="mainSection">
               <div id="mainBody">
                 <div class="summary">
-       Gets or sets a value indicating whether this <a href="T-FastMoq.Mocker.htm">Mocker</a> is strict. If strict, the mock
-       <span class="nolink">[IFileSystem]</span> does
-       not use <span class="nolink">[MockFileSystem]</span> and uses <span class="nolink">[Mock]</span> of <span class="nolink">[IFileSystem]</span>.
-   </div>
+Gets or sets a value indicating whether this <a href="T-FastMoq.Mocker.htm">Mocker</a> is strict. If strict, the mock
+<a href="https://docs.microsoft.com/en-us/dotnet/api/system.io.abstractions.ifilesystem" target="_blank">IFileSystem</a> does
+not use <a href="https://docs.microsoft.com/en-us/dotnet/api/system.io.abstractions.testinghelpers.mockfilesystem" target="_blank">MockFileSystem</a> and uses <span class="nolink">Mock</span> of <a href="https://docs.microsoft.com/en-us/dotnet/api/system.io.abstractions.ifilesystem" target="_blank">IFileSystem</a>.
+</div>
                 <p />
     <b>Namespace:</b> 
    <a href="N-FastMoq.htm">FastMoq</a><br />
@@ -183,9 +183,9 @@
 <span class="keyword">property</span> <a href="https://docs.microsoft.com/en-us/dotnet/api/system.boolean" target="_blank">bool</a>^ <span class="identifier">Strict</span> {
 	<a href="https://docs.microsoft.com/en-us/dotnet/api/system.boolean" target="_blank">bool</a>^ <span class="keyword">get</span> ();
 	<span class="keyword">void</span> <span class="keyword">set</span> (<a href="https://docs.microsoft.com/en-us/dotnet/api/system.boolean" target="_blank">bool</a>^ <span class="parameter">value</span>);
-}</pre></div></div></div><h4 class="subHeading">Field Value</h4><span class="code">true</span> if strict <span class="nolink">[IFileSystem]</span> resolution; otherwise, <span class="code">false</span> uses the built-in virtual
-       <span class="nolink">[MockFileSystem]</span>.
-   </div><div class="LW_CollapsibleArea_Container"><div class="LW_CollapsibleArea_TitleDiv"><h2 class="LW_CollapsibleArea_Title">See Also</h2><div class="LW_CollapsibleArea_HrDiv"><hr class="LW_CollapsibleArea_Hr" /></div></div><a id="seeAlsoSection"><!----></a><div class="seeAlsoStyle"><a href="T-FastMoq.Mocker.htm">Mocker Class</a></div><div class="seeAlsoStyle"><a href="N-FastMoq.htm">FastMoq Namespace</a></div></div></div>
+}</pre></div></div></div><h4 class="subHeading">Field Value</h4><span class="code">true</span> if strict <a href="https://docs.microsoft.com/en-us/dotnet/api/system.io.abstractions.ifilesystem" target="_blank">IFileSystem</a> resolution; otherwise, <span class="code">false</span> uses the built-in virtual
+<a href="https://docs.microsoft.com/en-us/dotnet/api/system.io.abstractions.testinghelpers.mockfilesystem" target="_blank">MockFileSystem</a>.
+</div><div class="LW_CollapsibleArea_Container"><div class="LW_CollapsibleArea_TitleDiv"><h2 class="LW_CollapsibleArea_Title">See Also</h2><div class="LW_CollapsibleArea_HrDiv"><hr class="LW_CollapsibleArea_Hr" /></div></div><a id="seeAlsoSection"><!----></a><div class="seeAlsoStyle"><a href="T-FastMoq.Mocker.htm">Mocker Class</a></div><div class="seeAlsoStyle"><a href="N-FastMoq.htm">FastMoq Namespace</a></div></div></div>
             </div>
           </div>
         </div>
