--- a/Help/html/Fields.T-FastMoq.Mocker.htm
+++ b/Help/html/Fields.T-FastMoq.Mocker.htm
@@ -191,8 +191,8 @@
                       </td>
                       <td>
                         <div class="summary">
-       The virtual mock file system that is used by mocker unless overridden with the <a href="P-FastMoq.Mocker.Strict.htm">Strict</a> property.
-   </div>
+The virtual mock file system that is used by mocker unless overridden with the <span class="nolink">Strict</span> property.
+</div>
                       </td>
                     </tr>
                     <tr data="protected;declared;notNetfw;">
@@ -204,8 +204,8 @@
                       </td>
                       <td>
                         <div class="summary">
-       List of <a href="T-FastMoq.MockModel.htm">MockModel</a>.
-   </div>
+List of <a href="T-FastMoq.MockModel-1.htm">MockModel<span class="languageSpecificText"><span class="cs">&lt;</span><span class="vb">(Of </span><span class="cpp">&lt;</span><span class="nu">(</span><span class="fs">&lt;'</span></span>T<span class="languageSpecificText"><span class="cs">&gt;</span><span class="vb">)</span><span class="cpp">&gt;</span><span class="nu">)</span><span class="fs">&gt;</span></span></a>.
+</div>
                       </td>
                     </tr>
                   </table>
