--- a/Help/html/Properties.T-FastMoq.Mocker.htm
+++ b/Help/html/Properties.T-FastMoq.Mocker.htm
@@ -188,10 +188,10 @@
                       </td>
                       <td>
                         <div class="summary">
-       Gets or sets a value indicating whether this <a href="T-FastMoq.Mocker.htm">Mocker</a> is strict. If strict, the mock
-       <span class="nolink">[IFileSystem]</span> does
-       not use <span class="nolink">[MockFileSystem]</span> and uses <span class="nolink">[Mock]</span> of <span class="nolink">[IFileSystem]</span>.
-   </div>
+Gets or sets a value indicating whether this <a href="T-FastMoq.Mocker.htm">Mocker</a> is strict. If strict, the mock
+<a href="https://docs.microsoft.com/en-us/dotnet/api/system.io.abstractions.ifilesystem" target="_blank">IFileSystem</a> does
+not use <a href="https://docs.microsoft.com/en-us/dotnet/api/system.io.abstractions.testinghelpers.mockfilesystem" target="_blank">MockFileSystem</a> and uses <span class="nolink">Mock</span> of <a href="https://docs.microsoft.com/en-us/dotnet/api/system.io.abstractions.ifilesystem" target="_blank">IFileSystem</a>.
+</div>
                       </td>
                     </tr>
                   </table>
